--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^12.4.0",
     "apexcharts": "^4.3.0",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
