--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "lucide-vue-next": "^0.469.0",
+    "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "radix-vue": "^1.9.12",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
