--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue3-apexcharts": "^1.8.0"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.3.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
