--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.0",
     "vue-sonner": "^1.3.0",
-    "vue3-apexcharts": "^1.8.0"
+    "vue3-apexcharts": "^1.8.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@iconify/vue": "^4.3.0",
+    "@types/xlsx": "^0.0.35",
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
