--- a/package.json
+++ b/package.json
@@ -3,11 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+    "scripts": {    "dev": "vite",    "build": "vue-tsc && vite build",    "preview": "vite preview",    "type-check": "vue-tsc --noEmit"  },
   "dependencies": {
     "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vueuse/core": "^12.4.0",
@@ -33,15 +29,19 @@
   },
   "devDependencies": {
     "@iconify/vue": "^4.3.0",
+    "@types/node": "^22.15.21",
     "@types/xlsx": "^0.0.35",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3",
     "unplugin-auto-import": "^19.1.1",
     "unplugin-vue-components": "^28.4.1",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vue-tsc": "^2.2.10"
   }
 }
