--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "typescript": "^5.8.3",
     "unplugin-auto-import": "^19.1.1",
     "unplugin-vue-components": "^28.4.1",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vue-tsc": "^2.2.10"
   }
 }
